fix: image was too wide for mobile

--- a/grails-app/assets/stylesheets/layout.css
+++ b/grails-app/assets/stylesheets/layout.css
@@ -798,6 +798,10 @@ strong {
   #mobileAd {
     margin-bottom: -12px;
   }
+  #mobileAd img {
+    max-width: 98%;
+    height: auto;
+  }
 }
 
 .tooltip {
